--- a/index.html
+++ b/index.html
@@ -5,180 +5,189 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Vzít batoh na záda a jít ...</title>
 <style>
-:root{
-  --dark-blue:#041633;
-  --accent:#ffffff;
-  --max-width:1200px;
+:root {
+  --dark-blue: #041633;
+  --accent: #ffffff;
+  --max-width: 1200px;
 }
 
 /* Base */
-*{box-sizing:border-box}
-html,body{
-  margin:0;padding:0;
-  font-family:Inter,system-ui,-apple-system,"Segoe UI",Roboto,Arial;
-  color:var(--accent);
-  background:var(--dark-blue);
-  overflow-x:hidden;
-  scroll-behavior:auto !important;
+* { box-sizing: border-box; }
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+  color: var(--accent);
+  background: var(--dark-blue);
+  overflow-x: hidden;
+  scroll-behavior: auto !important;
 }
 
-/* Panorama */
-.hero{
-  position:relative;
-  width:100%;
-  height:100vh;
-  overflow:hidden;
-  background:var(--dark-blue);
+/* Hero sekce */
+.hero {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background: var(--dark-blue);
 }
+
+/* Fotka v hero sekci */
 .hero-bg {
   position: absolute;
   inset: 0;
-  background: url("https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg")
-             no-repeat top center;
-  background-size: cover;       /* 🟢 Vyplní šířku i výšku, zachová poměr stran */
-  background-color: #041633;    /* 🔵 Vyplní případné mezery na extrémních obrazovkách */
+  overflow: hidden;
   z-index: 0;
 }
-.hero-overlay{
-  position:relative; z-index:2; height:100%;
-  display:flex; flex-direction:column; align-items:center;
-  justify-content:flex-start; text-align:center;
-  padding-top:100px;
+.hero-bg img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;         /* vyplní celou šířku */
+  height: auto;         /* zachová poměr stran */
+  object-fit: cover;    /* vyplní výšku bez deformace */
+  object-position: top; /* začíná nahoře */
+  min-height: 100%;     /* zajistí, že pokryje výšku okna */
 }
-.hero h1{
-  font-size:clamp(30px,6vw,56px);
-  margin:0;
-  text-shadow:0 3px 10px rgba(0,0,0,0.5);
+
+/* Text a navigace přes fotku */
+.hero-overlay {
+  position: relative;
+  z-index: 2;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  padding-top: 100px;
 }
-.nav{
-  margin-top:18px; display:flex; gap:12px; flex-wrap:wrap; justify-content:center;
+.hero h1 {
+  font-size: clamp(30px, 6vw, 56px);
+  margin: 0;
+  text-shadow: 0 3px 10px rgba(0,0,0,0.5);
 }
-.btn{
-  background:rgba(255,255,255,0.12);
-  border:1px solid rgba(255,255,255,0.2);
-  padding:10px 18px; color:white; border-radius:8px;
-  font-weight:600; cursor:pointer; transition:background .2s;
+.nav {
+  margin-top: 18px;
+  display: flex;
+  gap: 12px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.btn:hover{background:rgba(255,255,255,0.25);}
-.btn.active{background:#fff;color:var(--dark-blue);}
+.btn {
+  background: rgba(255,255,255,0.12);
+  border: 1px solid rgba(255,255,255,0.2);
+  padding: 10px 18px;
+  color: white;
+  border-radius: 8px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background .2s;
+}
+.btn:hover { background: rgba(255,255,255,0.25); }
+.btn.active { background: #fff; color: var(--dark-blue); }
 
 /* Galerie */
-main{
-  position:relative;
-  margin-top:-420px;
-  z-index:3;
-  background:none;
-  padding-top:100px; padding-bottom:80px;
+main {
+  position: relative;
+  margin-top: -420px;
+  z-index: 3;
+  background: none;
+  padding-top: 100px;
+  padding-bottom: 80px;
 }
-.container{ width:95%; max-width:var(--max-width); margin:0 auto; }
-
-.gallery{ display:grid; gap:16px; }
-.grid-3{ grid-template-columns:repeat(3,1fr); }
-.grid-4{ grid-template-columns:repeat(4,1fr); }
-@media (max-width:1000px){
-  .grid-3{ grid-template-columns:repeat(2,1fr); }
-  .grid-4{ grid-template-columns:repeat(2,1fr); }
+.container { width: 95%; max-width: var(--max-width); margin: 0 auto; }
+.gallery { display: grid; gap: 16px; }
+.grid-3 { grid-template-columns: repeat(3,1fr); }
+.grid-4 { grid-template-columns: repeat(4,1fr); }
+@media (max-width:1000px) {
+  .grid-3 { grid-template-columns: repeat(2,1fr); }
+  .grid-4 { grid-template-columns: repeat(2,1fr); }
 }
-@media (max-width:600px){
-  .grid-3,.grid-4{ grid-template-columns:1fr; }
+@media (max-width:600px) {
+  .grid-3, .grid-4 { grid-template-columns: 1fr; }
 }
 
 /* Karty */
-.photo-card{
-  position:relative; overflow:hidden; border-radius:10px; cursor:pointer; background:#000;
+.photo-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 10px;
+  cursor: pointer;
+  background: #000;
 }
-.photo-card img.photo{
-  width:100%; aspect-ratio:3/2; object-fit:cover; transition:transform .35s ease;
+.photo-card img.photo {
+  width: 100%;
+  aspect-ratio: 3/2;
+  object-fit: cover;
+  transition: transform .35s ease;
 }
-.photo-card:hover img.photo{ transform:scale(1.04); }
-.photo-overlay{
-  position:absolute; left:0; right:0; bottom:0; padding:10px;
-  background:linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
-  color:#fff;
+.photo-card:hover img.photo { transform: scale(1.04); }
+.photo-overlay {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+  background: linear-gradient(to top, rgba(0,0,0,0.7), rgba(0,0,0,0));
+  color: #fff;
 }
-.photo-title{ font-weight:700; font-size:14px; margin:0; }
-.photo-sub{ font-size:12px; opacity:0.9; margin-top:3px; }
+.photo-title { font-weight: 700; font-size: 14px; margin: 0; }
+.photo-sub { font-size: 12px; opacity: 0.9; margin-top: 3px; }
 
 /* Modal */
-.modal-backdrop{
-  position:fixed; inset:0; background:rgba(0,0,0,0.7);
-  display:flex; align-items:center; justify-content:center;
-  z-index:9999; padding:24px; opacity:0; pointer-events:none; transition:opacity .18s;
-}
-.modal-backdrop.show{ opacity:1; pointer-events:auto; }
-.modal{
-  width:100%; max-width:980px; max-height:92vh;
-  background:#071431; border-radius:10px; padding:18px; color:#fff;
-  overflow:auto; position:relative;
-}
-.modal-close{
-  position:absolute; right:16px; top:16px; background:none; border:none; color:white; font-size:22px; cursor:pointer;
-}
-.modal .meta{ font-size:14px; opacity:0.95; margin-bottom:10px; }
-.modal img.main{ width:100%; border-radius:8px; object-fit:cover; margin:12px 0; max-height:480px; }
-
-footer{ text-align:center; color:rgba(255,255,255,0.6); padding:30px 0; }
-
-/* Fullscreen Nepál */
-.modal.fullscreen {
-  background: #000;
-  max-width: none;
-  max-height: none;
-  width: 100%;
-  height: 100%;
-  padding: 0;
+.modal-backdrop {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.7);
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 9999;
+  padding: 24px;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .18s;
 }
-.modal.fullscreen img.main {
-  max-height: 90vh;
-  max-width: 95vw;
-  object-fit: contain;
+.modal-backdrop.show { opacity: 1; pointer-events: auto; }
+.modal {
+  width: 100%;
+  max-width: 980px;
+  max-height: 92vh;
+  background: #071431;
   border-radius: 10px;
-  margin: 0 auto;
-  display: block;
+  padding: 18px;
+  color: #fff;
+  overflow: auto;
+  position: relative;
 }
-.modal.fullscreen h3 {
+.modal-close {
   position: absolute;
-  top: 20px;
-  left: 30px;
-  color: white;
-  text-shadow: 0 2px 5px rgba(0,0,0,0.8);
-}
-.modal.fullscreen .modal-close {
-  position: absolute;
-  top: 18px;
-  right: 24px;
-  font-size: 30px;
+  right: 16px;
+  top: 16px;
   background: none;
   border: none;
   color: white;
+  font-size: 22px;
   cursor: pointer;
-  z-index: 10;
 }
-.modal.fullscreen .nav-arrow {
-  background: none;
-  border: none;
-  color: white;
-  font-size: 40px;
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 20px;
-  opacity: 0.6;
-  transition: opacity 0.2s;
+.modal .meta { font-size: 14px; opacity: 0.95; margin-bottom: 10px; }
+.modal img.main {
+  width: 100%;
+  border-radius: 8px;
+  object-fit: cover;
+  margin: 12px 0;
+  max-height: 480px;
 }
-.modal.fullscreen .nav-arrow:hover { opacity: 1; }
-.modal.fullscreen .nav-arrow.left { left: 20px; }
-.modal.fullscreen .nav-arrow.right { right: 20px; }
+footer { text-align: center; color: rgba(255,255,255,0.6); padding: 30px 0; }
 </style>
 </head>
 <body>
 
 <header class="hero">
-  <div class="hero-bg"></div>
+  <div class="hero-bg">
+    <img src="https://raw.githubusercontent.com/suchanek76/website/main/images/background.jpg" alt="background">
+  </div>
   <div class="hero-overlay">
     <h1>Vzít batoh na záda a jít ...</h1>
     <div class="nav">
