--- a/index.html
+++ b/index.html
@@ -32,24 +32,27 @@ html, body {
   overflow: hidden;
 }
 
-/* 🟢 Fotka bez ořezu, začíná nahoře a roztahuje se přes celou šířku */
 .hero-bg {
   position: absolute;
   inset: 0;
   z-index: 0;
-  background-color: var(--dark-blue);
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-.hero-bg img {
-  width: 100%;
-  height: auto;
-  min-height: 100vh;
-  object-fit: contain;
-  object-position: top center;
   background-color: #041633;
 }
+
+.hero-bg img {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  height: auto;
+  width: auto;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: contain;        /* zobrazí celou fotku */
+  object-position: top center;
+  background-color: #041633;  /* vyplní případné pruhy */
+}
+
 
 /* Text a navigace */
 .hero-overlay {
